--- a/app/views/appointments/show.html.erb
+++ b/app/views/appointments/show.html.erb
@@ -13,66 +13,54 @@
 
   <div class="card d-flex flex-column mb-3">
     <div class="card-header">
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person iconsvg" viewBox="0 0 16 16">
-        <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0m4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4m-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10s-3.516.68-4.168 1.332c-.678.678-.83 1.418-.832 1.664z"/>
-        </svg>
+        <i class="fa-regular fa-user"></i>
         <p> Le vétérinaire :</p>
     </div>
         <div class="card-body">
-          <h5 class="card-title">Nom veterinaire</h5>
+          <h5 class="card-title"><%=@professional.name%></h5>
         </div>
   </div>
 
   <div class="card d-flex flex-column mb-3">
     <div class="card-header">
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-geo-alt" viewBox="0 0 16 16">
-        <path d="M12.166 8.94c-.524 1.062-1.234 2.12-1.96 3.07A32 32 0 0 1 8 14.58a32 32 0 0 1-2.206-2.57c-.726-.95-1.436-2.008-1.96-3.07C3.304 7.867 3 6.862 3 6a5 5 0 0 1 10 0c0 .862-.305 1.867-.834 2.94M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10"/>
-        <path d="M8 8a2 2 0 1 1 0-4 2 2 0 0 1 0 4m0 1a3 3 0 1 0 0-6 3 3 0 0 0 0 6"/>
-        </svg>
+       <i class="fa-solid fa-location-dot"></i>
         <p> Addresse :</p>
     </div>
         <div class="card-body">
-          <h5 class="card-title">Lien pour adresse</h5>
+          <h5 class="card-title"><%= @professional.address %></h5>
         </div>
   </div>
 
   <div class="card d-flex flex-column mb-3">
     <div class="card-header">
-       <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-phone" viewBox="0 0 16 16">
-        <path d="M11 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1zM5 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"/>
-        <path d="M8 14a1 1 0 1 0 0-2 1 1 0 0 0 0 2"/>
-        </svg>
+      <i class="fa-solid fa-phone"></i>
         <p> Téléphone :</p>
     </div>
         <div class="card-body">
-          <h5 class="card-title">lien pour le tel</h5>
+          <h5 class="card-title"><%= @professional.phone %></h5>
         </div>
   </div>
 
 
   <div class="card d-flex flex-column mb-3">
     <div class="card-header">
-       <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar" viewBox="0 0 16 16">
-        <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5M1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4z"/>
-        </svg>
+       <i class="fa-regular fa-calendar"></i>
         <p> Date du rendez-vous:</p>
     </div>
         <div class="card-body">
-          <h5 class="card-title">afficher le rendez-vous</h5>
+          <h5 class="card-title"><%= @appointment.date.strftime("%d/%m/%Y") %></h5>
+
         </div>
   </div>
 
 
   <div class="card">
     <div class="card-header">
-      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-clock" viewBox="0 0 16 16">
-      <path d="M8 3.5a.5.5 0 0 0-1 0V9a.5.5 0 0 0 .252.434l3.5 2a.5.5 0 0 0 .496-.868L8 8.71z"/>
-      <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16m7-8A7 7 0 1 1 1 8a7 7 0 0 1 14 0"/>
-      </svg>
+     <i class="fa-regular fa-clock"></i>
         <p> Heure du rendez-vous:</p>
     </div>
         <div class="card-body">
-          <h5 class="card-title">afficher l Heure du rendez-vous</h5>
+          <h5 class="card-title"><%= @appointment.start_time.strftime("%H:%M") %></h5>
         </div>
   </div>
 </div>
