--- a/app/views/professionals/show.html.erb
+++ b/app/views/professionals/show.html.erb
@@ -1,11 +1,12 @@
 <div>
   <i class="fa-solid fa-chevron-left text-primary ms-4"></i><%= link_to 'Back', :back, class:"m-3 text-decoration-none" %>
 </div>
-<div class="text-center m-4">
-  <h1><%= @professional.name %></h1>
-  <p><%= @professional.specialty%></p>
+<div class="sticky-top mt-3">
+  <div class="text-center m-4">
+    <h1><%= @professional.name %></h1>
+    <p><%= @professional.specialty%></p>
+  </div>
 </div>
-
 <div class="grid">
   <div id="info-pro" class="m-4">
     <div style="margin: 8px;" class="text-center">
@@ -37,26 +38,28 @@
             <img src="https://res.cloudinary.com/dsbteudoz/image/upload/v1733931919/customer-feedback_r2zm9o.png">
           </div>
         <% else %>
-            <% @reviews.each do |review| %>
-              <div class="border-bottom mt-2">
-                <div class="d-flex flex-row">
-                  <%# <p><%= review.user.first_name %></p> Prénom%>
-                  <%# <p><%= review.user.last_name %></p> Nom%>
-                </div>
-                <div class="d-flex flex-row justify-content-between">
-                  <p><%= review.content %></p>
-                  <p><%= review.rating %> / 5</p>
-                </div>
-              </div>
-            <% end %>
-        <% end %>
-      </div>
-      <div class="d-flex justify-content-center mt-3">
-        <%= link_to "Ajouter un avis",  new_professional_review_path(@professional, @appointment), class:"btn btn-primary text-white", style:"width: 20%;"%>
-      </div>
-    </div>
+          <% @reviews.each do |review| %>
+            <div class="border-bottom mt-2">
+              <div class="d-flex flex-row">
+                <%# <p><%= review.user.first_name %></p>
+              Prénom%>
+              <%# <p><%= review.user.last_name %></p>
+            Nom%>
+          </div>
+          <div class="d-flex flex-row justify-content-between">
+            <p><%= review.content %></p>
+            <p><%= review.rating %> / 5</p>
+          </div>
+        </div>
+      <% end %>
+    <% end %>
   </div>
-  <div id="available-pro", style="position: sticky; top: 100px;">
-    <%= render "available_slots", professional: @professional %>
+  <div class="d-flex justify-content-center mt-3">
+    <%= link_to "Ajouter un avis",  new_professional_review_path(@professional, @appointment), class:"btn btn-primary text-white", style:"width: 20%;"%>
   </div>
+</div>
+</div>
+<div id="available-pro", style="position: sticky; top: 100px;">
+  <%= render "available_slots", professional: @professional %>
+</div>
 </div>
