--- a/app/views/animals/show.html.erb
+++ b/app/views/animals/show.html.erb
@@ -2,13 +2,13 @@
   <i class="fa-solid fa-chevron-left text-primary m-4"></i><%= link_to 'Back', :back, class:"m-3 text-decoration-none" %>
 </div>
 <div class="container">
-  <div class="row">
-    <div class="col card_pro">
-      <%= image_tag @animal.photo, class: "card-img-top" if @animal.photo.present? %>
+  <div class="row d-flex justify-content-center">
+    <div class="col-lg-5 col-sm-10 card_pro">
+      <%= image_tag @animal.photo, class: "card-img-top w-100 h-100" if @animal.photo.present? %>
     </div>
-    <div class="col card_pro d-flex flex-column justify-content-between">
+    <div class="col-lg-5 col-sm-10 card_pro d-flex flex-column justify-content-between">
       <div>
-        <h3 class="text-center"><%= @animal.name %></h3>
+        <h3 class="text-center m-3"><strong><%= @animal.name %></strong></h3>
         <p class="my-2">Âge: <%= @animal.age %></p>
         <p>Sexe: <%= @animal.sex %></p>
         <p class="my-2">Race: <%= @animal.species %></p>
