--- a/app/views/appointments/new.html.erb
+++ b/app/views/appointments/new.html.erb
@@ -1,8 +1,6 @@
-
 <div>
   <i class="fa-solid fa-chevron-left text-primary m-4"></i><%= link_to 'Retour', :back, class:"text-decoration-none" %>
 </div>
-
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-12 col-sm-4 col-lg-6">
@@ -12,7 +10,6 @@
           <h1>Confirmation du rendez-vous</h1>
         </div>
         <div class="text-center rounded-3">
-
           <%= simple_form_for [@professional, Appointment.new], html:{
             data: {
             controller: "alert",
@@ -56,6 +53,26 @@
                 </h5>
               </div>
             </div>
+
+            <div class="card">
+              <div class="card-header rounded-3">
+                <i class="fa-solid fa-dog"></i>
+                <p> Animal concerné:</p>
+              </div>
+              <div class="card-body rounded-3">
+                <h5>
+                  <%= a.input :pet_id,
+                    label: false,
+                    collection: @current_user_pets,
+                    value_method: :id,   # Utilise l'ID comme valeur enregistrée
+                    label_method: :name, # Affiche le nom du pet dans la liste
+                    prompt: "Choisir un animal" # Texte par défaut pour le dropdown
+                  %>
+                </h5>
+              </div>
+            </div>
+
+
             <div class="card">
               <div class="card-header rounded-3">
                 <i class="fa-regular fa-clock"></i>
@@ -63,14 +80,13 @@
               </div>
               <div class="card-body rounded-3">
                 <h5>
-                <%= a.input :reason, label: false, as: :text, input_html: { rows: 3 }%>
+                  <%= a.input :reason, label: false, as: :text, input_html: { rows: 3 }%>
                 </h5>
               </div>
             </div>
             <%= a.button :submit, "Confirmer le rendez-vous", class: "btn btn-primary my-4 rounded rounded-4" %>
           <% end %>
         </div>
-
         <%# <div class="container text-center shadow-lg p-3 mb-5 bg-body-tertiary rounded"> %>
         <%# <div class="p-2">
             <p>Pour confirmer votre rendez-vous, une somme de 10 € sera débitée. Cet acompte sera déduit du montant total des frais de consultation.</p>
@@ -103,7 +119,6 @@
               </form>
             </div> %>
         <%# </div> %>
-
       </div>
     </div>
   </div>
