--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,8 +19,8 @@
         <%# my pets %>
         <div class="col card_pro p-4 m-2 text-center" style="width: 47%;">
           <div class="d-flex flex-row justify-content-center">
-            <h2> <strong> Mes animaux </strong> </h2>
-            <a href="<%=new_pet_path(current_user)%>" class="btn btn-primary rounded-circle shadow mx-3" >
+            <h2 class="mx-3"> <strong> Mes animaux </strong> </h2>
+            <a href="<%=new_pet_path(current_user)%>" class="btn btn-primary rounded-circle shadow " >
               <i class="fa-solid fa-plus"></i>
             </a>
           </div>
@@ -31,36 +31,39 @@
 
             <img src="https://res.cloudinary.com/dsbteudoz/image/upload/v1734435780/dog-thinking-about-bone-removebg-preview_nlayll.png" alt="pas d'animaux" style="width: 200px; ">
           <% else %>
-            <% @pets.each do |pet| %>
-              <a href="<%=pet_path(current_user, pet)%>" class="text-decoration-none">
-                <%= cl_image_tag pet.photo.key, width: 100, style: "border-radius: 50%; margin: 20px; aspect-ratio: 1;", class:"shadow"%>
-              </a>
-            <% end %>
+            <div class="d-flex flex-row justify-content-center" >
+              <% @pets.each do |pet| %>
+                <a href="<%=pet_path(current_user, pet)%>" class="text-decoration-none">
+                  <%= cl_image_tag pet.photo.key, width: 150, style: "border-radius: 50%; margin: 20px; aspect-ratio: 1;", class:"shadow"%>
+                </a>
+              <% end %>
+            </div>
           <% end %>
         </div>
       </div>
     </div>
     <%# my appointments %>
-    <div class="card_pro p-4 m-3 text-center">
-      <h2> <strong> Mes rendez-vous </strong> </h2>
+    <div class="row card_pro p-4 m-3 text-center">
+      <h2 class="mb-3"> <strong> Mes rendez-vous </strong> </h2>
       <% if @appointments.empty? %>
         <p class="mt-3">Vous n'avez pas de rendez-vous</p>
         <img src="https://res.cloudinary.com/dsbteudoz/image/upload/v1733845850/owner-playing-with-pet-dog_vfnehl.png">
       <% else %>
         <% @appointments.each do |a| %>
-          <a href="<%=professional_appointment_path(a.professional, a)%>" style="text-decoration: none; color: black">
-            <div class="card_pro p-4 m-1 text-start" style="background-color: #f7e6d4;">
-              <div class="text-end">
-                <div >
-                  <p><%= a.date.strftime("%d/%m/%Y")%></p>
-                  r
-                  <p><%= a.start_time.strftime("%H:%M")%></p>
+          <div class="col">
+            <a href="<%=professional_appointment_path(a.professional, a)%>" style="text-decoration: none; color: black">
+              <div class="card_pro p-4 m-1 text-start" style="background-color: #f7e6d4;">
+                <div class="text-end">
+                  <div >
+                    <p><%= a.date.strftime("%d/%m/%Y")%></p>
+                    <p><%= a.start_time.strftime("%H:%M")%></p>
+                  </div>
                 </div>
+                <p>Professionnel : <strong><%= a.professional.name %></strong></p>
+                <p style="word-wrap: break-word; word-break: break-word;">Motif de la visite : <%= truncate(a.reason, length: 100, omission: '...') %></p>
               </div>
-              <p>Professionnel : <strong><%= a.professional.name %></strong></p>
-              <p style="word-wrap: break-word; word-break: break-word;">Motif de la visite : <%= truncate(a.reason, length: 100, omission: '...') %></p>
-            </div>
-          </a>
+            </a>
+          </div>
         <% end %>
       <% end%>
     </div>
