--- a/app/assets/stylesheets/components/_card_professional.scss
+++ b/app/assets/stylesheets/components/_card_professional.scss
@@ -5,6 +5,14 @@
   margin: 8px;
   padding: 8px;
   box-shadow: 4px 4px 2px rgb(219, 216, 216);
+
+  // @media (max-width: 480px) {
+  //   font-size: 0.8rem;
+  //   width: 80%;
+  //   display: flex;
+  //   flex-direction: column;
+  //   justify-content: center;
+  // }
 }
 
 .grid-professional-show {
@@ -14,10 +22,15 @@
 }
 
 .card_pro_index {
-  width: 90%;
+  width: 100%;
 
   @media (max-width: 768px) {
     width: 90%;
+    font-size: 0.8rem;
+
+    h2, h4{
+      font-size: 1rem;
+    }
   }
 
   @media (max-width: 480px) {
