--- a/app/views/professionals/index.html.erb
+++ b/app/views/professionals/index.html.erb
@@ -3,19 +3,21 @@
 </div>
 <div class="container-all">
   <div class="grid-map">
-    <div>
+    <div class="d-flex justify-content-center">
       <% @professionals.each do |professional|%>
-        <div class="card_pro_index d-block mx-auto">
-          <div class="card_pro grid-index d-block mx-auto">
-            <a href="<%=professional_path(professional)%>" class="text-decoration-none text-black ms-3" style="width: 100%">
-              <%= cl_image_tag professional.photo.key, class:"rounded-3 d-block mx-auto img-fluid", crop: :fill, width: 400 %>
-              <h2 class="text-center my-3"><%= professional.name %> </h2>
-              <div class="ms-2">
-                <p>Specialité : <%= professional.specialty %></p>
-                <p>Adresse : <%= professional.address %></p>
-              </div>
-                <p class="text-center"><%= professional.description %></p>
-            </a>
+        <div class="card_pro_index">
+          <div class="card_pro grid-index align-items-center">
+            <div>
+              <a href="<%=professional_path(professional)%>" class="text-decoration-none text-black mx-auto" style="width: 100%;">
+                <%= cl_image_tag professional.photo.key, class:"rounded-3 d-block mx-auto img-fluid", crop: :fill %>
+                <h2 class="text-center my-3"><%= professional.name %> </h2>
+                <div class="ms-2">
+                  <p>Specialité : <%= professional.specialty %></p>
+                  <p>Adresse : <%= professional.address %></p>
+                </div>
+                  <p class="text-center"><%= professional.description %></p>
+              </a>
+            </div>
             <%= render "shared/available_slots", professional: professional%>
           </div>
         </div>
