--- a/app/views/professionals/show.html.erb
+++ b/app/views/professionals/show.html.erb
@@ -1,63 +1,67 @@
 <div>
   <i class="fa-solid fa-chevron-left text-primary m-4"></i><%= link_to 'Back', :back, class:"m-3 text-decoration-none" %>
 </div>
-<div>
-  <div class="text-center m-4">
-    <h1><%= @professional.name %></h1>
-    <p><%= @professional.specialty%></p>
+<div class="container-all">
+  <div>
+    <div class="text-center m-4">
+      <h1><%= @professional.name %></h1>
+      <p><%= @professional.specialty%></p>
+    </div>
   </div>
-</div>
-<div class="grid">
-  <div id="info-pro" class="m-4">
-    <div style="margin: 8px;" class="text-center">
-      <%= cl_image_tag @professional.photo.key, width: 400, crop: :fill, class:"rounded-4 mb-3"%>
-    </div>
-    <div class="card_pro">
-      <h4>Contact : </h4>
-      <p>Adresse : <%=@professional.address%></p>
-      <p>Numéro de téléphone : <%=@professional.phone%></p>
-    </div>
-    <div class="card_pro">
-      <h4>Description : </h4>
-      <p><%=@professional.description%></p>
-    </div>
-    <div class="card_pro">
-      <div class="d-flex flex-row justify-content-between">
-        <h4>Les avis : </h4>
-        <div class="d-flex flex-row align-items-center">
-          <% @professional.rating.times do %>
-            <i class="fas fa-star text-warning m-0"></i>
-          <% end %>
-          <% (5 - @professional.rating).times do %>
-            <i class="fas fa-star text-muted m-0"></i>
-          <% end %>
-          <p class="m-0 mx-1">(<%=@reviews.count%>)</p>
+  <div class="grid">
+    <div id="info-pro">
+      <div style="margin: 8px;" class="text-center">
+        <%= cl_image_tag @professional.photo.key, crop: :fill, class:"rounded-4 mb-2", style:"width: 80%;"%>
+      </div>
+      <div class="d-flex flex-column justify-content-center" style="width: 100%;">
+        <div class="card_pro">
+          <h4>Contact : </h4>
+          <p>Adresse : <%=@professional.address%></p>
+          <p>Numéro de téléphone : <%=@professional.phone%></p>
+        </div>
+        <div class="card_pro">
+          <h4>Description : </h4>
+          <p><%=@professional.description%></p>
+        </div>
+        <div class="card_pro">
+          <div class="d-flex flex-row justify-content-between">
+            <h4>Les avis : </h4>
+            <div class="d-flex flex-row align-items-center">
+              <% @professional.rating.times do %>
+                <i class="fas fa-star text-warning m-0"></i>
+              <% end %>
+              <% (5 - @professional.rating).times do %>
+                <i class="fas fa-star text-muted m-0"></i>
+              <% end %>
+              <p class="m-0 mx-1">(<%=@reviews.count%>)</p>
+            </div>
+          </div>
+          <div class="mt-2 d-flex flex-column justify-content-center align-items-center">
+            <% if @reviews.empty? %>
+              <div class="d-flex flex-column justify-content-center align-items-center", style="width: 24%;">
+                <p class="text-center">Soyez le premier à mettre un avis !</p>
+                <img src="https://res.cloudinary.com/dsbteudoz/image/upload/v1733931919/customer-feedback_r2zm9o.png">
+              </div>
+            <% else %>
+              <% @reviews.each do |review| %>
+                <div class="border-bottom mt-2" style="width: 100%;">
+                  <div class="d-flex flex-row justify-content-between">
+                    <p><%= review.user.first_name%> <%= review.user.last_name%></p>
+                    <p><%= review.rating %> / 5</p>
+                  </div>
+                  <p><%= review.content %></p>
+                </div>
+              <% end %>
+            <% end %>
+          </div>
+          <div class="d-flex justify-content-center mt-3">
+            <%= link_to "Ajouter un avis",  new_professional_review_path(@professional, @appointment), class:"btn btn-primary text-white mt-3", style:"width: 80%;"%>
+          </div>
         </div>
       </div>
-      <div class="mt-2 d-flex flex-column justify-content-center align-items-center">
-        <% if @reviews.empty? %>
-          <div class="d-flex flex-column justify-content-center align-items-center", style="width: 24%;">
-            <p class="text-center">Soyez le premier à mettre un avis !</p>
-            <img src="https://res.cloudinary.com/dsbteudoz/image/upload/v1733931919/customer-feedback_r2zm9o.png">
-          </div>
-        <% else %>
-          <% @reviews.each do |review| %>
-            <div class="border-bottom mt-2" style="width: 100%;">
-              <div class="d-flex flex-row justify-content-between">
-                <p><%= review.user.first_name%> <%= review.user.last_name%></p>
-                <p><%= review.rating %> / 5</p>
-              </div>
-              <p><%= review.content %></p>
-            </div>
-          <% end %>
-        <% end %>
-      </div>
-      <div class="d-flex justify-content-center mt-3">
-        <%= link_to "Ajouter un avis",  new_professional_review_path(@professional, @appointment), class:"btn btn-primary text-white", style:"width: 20%;"%>
-      </div>
     </div>
-  </div>
-  <div id="available-pro", style="position: sticky; top: 100px;">
-    <%= render "shared/available_slots", professional: @professional %>
+    <div id="available-pro", style="position: sticky; top: 100px;">
+      <%= render "shared/available_slots", professional: @professional %>
+    </div>
   </div>
 </div>
